--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Odin Recipes</title>
+    <title>5 Star Recipes!</title>
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/tacos.html">Tacos      </a>
-    <h1>        </h1>
-    <a href="../odin-recipes/recipes/potato.html">Fake Baked Potato!</a>
+    <img src="../odin-recipes/images/chef.jpg" alt="Some Randon Chef!" style="width:800px;height:450px;">
+    <h2>5 Star Recipes that even Gordon Ramsay would love!</h2>
+    <ul>
+
+   <li> <a href="../odin-recipes/recipes/tacos.html">Tacos      </a></li>
+<li><a href="../odin-recipes/recipes/potato.html">Fake Baked Potato!</a></li>
+<li> <a href="../odin-recipes/recipes/eggs.html">Fake Eggs and Toast!</a></li>
+</ul>
 </body>
 </html>
