--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1> Tacos </h1>
-    <img src="../images/tacos.jpg">
+    <img src="../images/tacos.jpg" style="width:800px;height:450px;">
     <h2> Tacos Al Pastor </h2>
     <h3> Ingredients:</h3>
     
@@ -33,5 +33,7 @@
                     <li> To assemble, place some pork on the tortillas, followed by a few pieces of pineapple, a sprinkling of onion, a pinch of cilantro, and a spoonful of salsa, and some diced avocado. Serve with lime wedges.</li>
                         <li>  Enjoy!</li>
 </ol>
+
+<a href="../index.html"> Return to Main Page! </a>
 </body>
 </html>
