--- a/recipes/potato.html
+++ b/recipes/potato.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Fake Baked Potato Recipe!</h1>
-    <img src="../images/potato.jpg" alt="Fake Baked Potato">
+    <img src="../images/potato.jpg" alt="Fake Baked Potato" style="width:800px;height:450px;">
     <h2> Baked Potato!</h2>
     <h3> Ingredients </h3>
     <ul>
@@ -22,5 +22,6 @@
         <li>Put cocoa powder into a bowl and roll unwrapped ice cream potato in the powder until completely covered. Slice the top of your ice cream potato and pull back edges a bit to make room for your whipped topping (Cool Whip) and Starburst candy butter. Shake off excess cocoa powder and place on a plate. Top with a dollop of Cool Whip for the "sour cream".</li>
             <li>Place your unwrapped yellow Starburst candy in the microwave for 10 seconds to soften - then press the edges out to make a larger "pat of butter". Top your potato and enjoy!</li>
     </ol>
+    <a href="../index.html"> Return to Main Page! </a>
 </body>
 </html>
