--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
 <head>
     <meta charset="utf-8">
     <title>5 Star Recipes!</title>
+    <link rel="Stylesheet" href="index.css"/>
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
-    <img src="../odin-recipes/images/chef.jpg" alt="Some Randon Chef!" style="width:800px;height:450px;">
+    <img id="chef" src="../odin-recipes/images/chef.gif"  alt="Some Randon Chef!" style="width:800px;height:450px;">
     <h2>5 Star Recipes that even Gordon Ramsay would love!</h2>
-    <ul>
+    
 
-   <li> <a href="../odin-recipes/recipes/tacos.html">Tacos      </a></li>
-<li><a href="../odin-recipes/recipes/potato.html">Fake Baked Potato!</a></li>
-<li> <a href="../odin-recipes/recipes/eggs.html">Fake Eggs and Toast!</a></li>
-</ul>
+<a href="../odin-recipes/recipes/tacos.html"> <img id= "tacos" src="../odin-recipes/images/tacos.jpg" alt="Taco Recipie"> </a>
+
+<a href="../odin-recipes/recipes/potato.html"> <img id="potato" src="../odin-recipes/images/potato.jpg"> </a>
+
+<a href="../odin-recipes/recipes/eggs.html"> <img id="eggs" src="../odin-recipes/images/eggs.jpg"> </a>
+
+<a href="../odin-recipes/recipes/hotDog.html"> <img id="hotDog" src="../odin-recipes/images/hotDog.jpg" alt="Hot Dog Recipe!"></a>
 </body>
 </html>
