--- a/recipes/eggs.html
+++ b/recipes/eggs.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="eggs.css"/>
     <title>Fake Eggs and Toast!</title>
 </head>
 <body>
     <h1> Fake Eggs and Toast!</h1>
     <img src="../images/eggs.jpg" style="width:800px;height:450px;" alt="Delicious Eggs!">
-    <h2> Sunny Side Up Sundaes!</h2>
 
-    <h3> Ingreadients</h3>
+    <div id="ingredients">
+    <h3 id="ingredientTitle"> Ingredients</h3>
     <ul>
         <li>4 slices cinnamon flavor frozen French toast</li>
             <li> 1 pint vanilla ice cream</li>
@@ -19,8 +20,10 @@
                     <li> cinnamon sugar, to taste</li>
                         <li> maple syrup (optional)</li>
     </ul>
+</div>
 
-    <h3> Steps </h3>
+<div id="instructions">
+    <h3 id="instructionTitle"> Instructions </h3>
     <ol>
        <li> Toast french toast slices according to package directions (you may also use your own leftover slices of French toast).</li>
        <li>  Let cool, then set onto 4 serving plates.</li>
@@ -30,6 +33,7 @@
        <li>  Pour the syrup (either the reserved syrup from the fruit or maple syrup) into a small pitcher and serve on the side as "syrup" and garnish each portion with cinnamon sugar. If you really want to be sneaky, put some cinnamon in a clean pepper shaker and sugar in the salt shaker.</li>
 
     </ol>
-    <a href="../index.html"> Return to Main Page! </a>
+</div>
+    <a id="menu" href="../index.html"> Return to Main Page! </a>
 </body>
 </html>
