--- a/recipes/hotDog.html
+++ b/recipes/hotDog.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="hotDog.css"/>
     <title>Fake Hot Dog Recipe!</title>
 </head>
 
 <body>
-    <h1> Fake Hot Dog Recipe!</h1>
+    <h1> Peanut Butter and Jelly Sandwich!</h1>
     <img src="../images/hotDog.jpg" alt="Hot Dog!" style="width:800px;height:450px;">
-    <h2> Hot Dog!</h2>
-    <h3> Ingredients</h3>
+    
+
+
+    <div id="ingredients">
+    <h3 id="ingredientTitle"> Ingredients</h3>
     <ul>
         <li>1 banana</li>
         <li>⅓ cup creamy peanut butter, to taste</li>
@@ -19,13 +23,18 @@
         <li>1-2 tablespoon strawberry preserves, to taste</li>
         <li>kiwi, chopped & peeled for relish (optional)</li>
     </ul>
+</div>
 
-    <h3> Steps</h3>
+<div id ="instructions">
+    <h3 id="instructionTitle"> Instructions</h3>
     <ol>
         <li> Peel banana.</li>
             <li>Spread peanut butter evenly on banana to give it a "hot dog-like" appearance.</li>
                 <li>Place in a hot dog bun.</li>
                     <li>Drizzle with strawberry preserves (ketchup) and chopped kiwi (relish), if desired.</li>
     </ol>
+</div>
+
+<a id="menu" href="../index.html"> Return to Main Page </a>
 </body>
 </html>
