--- a/recipes/potato.html
+++ b/recipes/potato.html
@@ -3,25 +3,32 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="potato.css">
     <title>Fake Baked Potato Recipe!</title>
 </head>
 <body>
     <h1>Fake Baked Potato Recipe!</h1>
     <img src="../images/potato.jpg" alt="Fake Baked Potato" style="width:800px;height:450px;">
-    <h2> Baked Potato!</h2>
-    <h3> Ingredients </h3>
+    
+
+   <div id ="ingredients">
+    <h3 id = "ingredientTitle"> Ingredients </h3>
     <ul>
 <li>2 scoops vanilla ice cream</li>
 <li>2 tablespoons cocoa powder</li>
 <li>3 tablespoons whipped topping</li>
 <li>1 yellow starburst candy</li>
     </ul>
-    <h3> Steps</h3>
+</div>
+
+<div id="instructions">
+    <h3 id="instructionTitle"> Instructions </h3>
     <ol>
         <li>Take 2 large scoops of vanilla ice cream and place on a large piece of plastic wrap. Wrap up and mold with hands into a potato shape. Put in freezer to set (about 20 minutes).</li>
         <li>Put cocoa powder into a bowl and roll unwrapped ice cream potato in the powder until completely covered. Slice the top of your ice cream potato and pull back edges a bit to make room for your whipped topping (Cool Whip) and Starburst candy butter. Shake off excess cocoa powder and place on a plate. Top with a dollop of Cool Whip for the "sour cream".</li>
             <li>Place your unwrapped yellow Starburst candy in the microwave for 10 seconds to soften - then press the edges out to make a larger "pat of butter". Top your potato and enjoy!</li>
     </ol>
-    <a href="../index.html"> Return to Main Page! </a>
+</div>
+    <a id="menu" href="../index.html"> Return to Main Page! </a>
 </body>
 </html>
