--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="tacos.css"> 
     <title>Tacos Al Pastor! </title>
 </head>
 <body>
     <h1> Tacos </h1>
     <img src="../images/tacos.jpg" style="width:800px;height:450px;">
-    <h2> Tacos Al Pastor </h2>
-    <h3> Ingredients:</h3>
     
+   
+    <div id="ingredients">
+    <h3 id="ingredientTitle"> Ingredients:</h3>
+    <ul >
    <li> 5 lb boneless pork shoulder</li>
    <li>3 tablespoons achiote paste</li>
    <li>2 tablespoons guajillo chili powder</li>
@@ -23,8 +26,11 @@
    <li>¾ cup white vinegar</li>
    <li>1 cup pineapple juice</li>
    <li>1 pineapple, skinned and sliced into 1-inch (2 cm) rounds</li>
+</ul>
+</div>
 
-   <h3> Steps </h3>
+<div id="instructions">
+   <h3 id="instructionTitle"> Instructions </h3>
    <ol>
     <li> Slice the pork shoulder into about 1-centimeter (¼ in) slices, then transfer to a large dish or bowl. In a medium bowl, combine the achiote paste, chili powder, garlic powder, oregano, cumin, salt, pepper, vinegar, and pineapple juice, mashing and stirring until smooth with no lumps. Pour the marinade over the pork slices, then toss to make sure they are coated on all sides. Cover the bowl with plastic wrap, then refrigerate for at least 2 hours or up to 3 days.</li>
         <li> Preheat the oven to 350°F (180°C). Line a baking sheet with parchment paper or aluminum foil.</li>
@@ -33,7 +39,8 @@
                     <li> To assemble, place some pork on the tortillas, followed by a few pieces of pineapple, a sprinkling of onion, a pinch of cilantro, and a spoonful of salsa, and some diced avocado. Serve with lime wedges.</li>
                         <li>  Enjoy!</li>
 </ol>
+</div>
 
-<a href="../index.html"> Return to Main Page! </a>
+<a id="menu" href="../index.html"> Return to Main Page! </a>
 </body>
 </html>
