--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Yeimi Recipes</h1>
 
     <img id="chef" src="../odin-recipes/images/chef.gif"  alt="Some Randon Chef!" style="width:800px;height:450px;">
     
