--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Yeimi Recipes</h1>
 
     <img id="chef" src="../odin-recipes/images/chef.gif"  alt="Some Randon Chef!" style="width:800px;height:450px;">
     
-    <h2>5 Star Recipes that even Gordon Ramsay would love!</h2>
+    <h2>my boyfriend is the beeesssttttt!</h2>
     
 <!--   Taco   -->   
 <a href="../odin-recipes/recipes/tacos.html"> <img id= "tacos" src="../odin-recipes/images/tacos.jpg" alt="Taco Recipie"> ''
